--- a/src/header/header.component.html
+++ b/src/header/header.component.html
@@ -11,7 +11,10 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/producs" routerLinkActive="active">
+        <a class="nav-link" routerLink="/products">Product</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/products" routerLinkActive="active">
           <button mat-button [matMenuTriggerFor]="animals">Products</button>
           <mat-menu #animals="matMenu">
             <button mat-menu-item [matMenuTriggerFor]="vertebrates">Vertebrates</button>
