--- a/src/products/products.component.scss
+++ b/src/products/products.component.scss
@@ -1,26 +1,38 @@
 .example-container {
-    // width: 500px;
-    height: 900px;
-    // border: 1px solid rgba(0, 0, 0, 0.5);
-  }
-  
-  .example-sidenav-content {
-    display: flex;
-    // height: 100%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .example-sidenav {
-    padding: 20px;
-  }
-  
-  .example-card {
-    max-width: 400px;
-  }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
-  
+  // width: 500px;
+  height: 900px;
+  // border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+
+.example-sidenav-content {
+  display: flex;
+  // height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.example-sidenav {
+  padding: 20px;
+}
+
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
+
+.fa-star-o:before {
+  content: "☆";
+  font-family: 'Font Awesome 5' !important;
+}
+
+.dm-rate-us .rtg {
+  text-align: center;
+  float: none;
+  direction: rtl;
+  margin-left: 0;
+}
