--- a/src/header/header.component.html
+++ b/src/header/header.component.html
@@ -11,9 +11,9 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products">Product</a>
+        <a class="nav-link" routerLink="/products" routerLinkActive="active">Product</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" routerLink="/products" routerLinkActive="active">
           <button mat-button [matMenuTriggerFor]="animals">Products</button>
           <mat-menu #animals="matMenu">
@@ -63,7 +63,7 @@
           </mat-menu>
 
         </a>
-      </li>
+      </li> -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
